fix bug with overflow

--- a/components/prices/styles.module.scss
+++ b/components/prices/styles.module.scss
@@ -1,6 +1,7 @@
 .prices {
   margin-top: 132px;
   padding: 0 20px;
+  overflow: hidden;
   &__wrapper {
     position: relative;
     margin: 0 auto;
